--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -8,6 +8,12 @@
   margin-bottom: 60px;
 }
 
+.footer__trademark {
+  margin: 0;
+  line-height: 1.2;
+  font-size: 18px;
+}
+
 @media screen and (max-width: 480px) {
   .footer {
     margin-top: 48px;
