--- a/blocks/page.css
+++ b/blocks/page.css
@@ -21,6 +21,6 @@
 @media screen and (max-width: 1100px) and (min-width: 320px) {
   .page__section {
     margin: 0 20px;
-    max-width: calc(100%-40px);
+    max-width: calc(100% - 40px);
   }
 }
