--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -23,6 +23,7 @@
   padding: 10px;
   align-self: center;
   transition: opacity linear 0.5s;
+  margin-right: auto;
 }
 
 .profile__edit-button:hover {
@@ -47,11 +48,13 @@
 }
 
 .profile__title {
+  font-family: "Inter", arial, sans-serif;
   font-size: 42px;
-  line-height: 48px;
+  line-height: 1.2;
   font-weight: 500;
   grid-area: title;
   margin: 0 0 7px 0;
+  align-self: center;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -59,14 +62,16 @@
 }
 
 .profile__description {
+  font-family: "Inter", arial, sans-serif;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.2;
   font-weight: 400;
   grid-area: description;
   margin: 0;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 415px;
 }
 
 .profile__image {
@@ -75,12 +80,14 @@
   border-radius: 50%;
   object-fit: cover;
   background-position: center;
-  margin-right: 24px;
+  margin-right: 30px;
 }
 
 @media screen and (max-width: 480px) {
   .profile {
     flex-direction: column;
+    margin-top: 42px;
+    margin-bottom: 36px;
   }
 
   .profile__title {
@@ -93,6 +100,7 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    margin: 30px 19px 36px 19px;
     justify-content: center;
     align-items: center;
   }
@@ -106,6 +114,20 @@
 
   .profile__add-button {
     margin: 0;
-    width: 100%;
+    width: 282px;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 780px) {
+  .profile__add-button {
+    margin: 0 0 0 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .profile__title {
+    font-size: 32px;
+    line-height: 38px;
+    max-width: 340px;
   }
 }
