--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -23,7 +23,6 @@
   padding: 10px;
   align-self: center;
   transition: opacity linear 0.5s;
-  margin-right: auto;
 }
 
 .profile__edit-button:hover {
@@ -32,7 +31,7 @@
 }
 
 .profile__add-button {
-  background: transparent url(../images/Add\ Button.svg) center no-repeat;
+  background: transparent url(../images/Addbutton.svg) center no-repeat;
   width: 150px;
   height: 50px;
   margin-left: auto;
@@ -50,7 +49,7 @@
 .profile__title {
   font-family: "Inter", arial, sans-serif;
   font-size: 42px;
-  line-height: 1.2;
+  line-height: 1.14;
   font-weight: 500;
   grid-area: title;
   margin: 0 0 7px 0;
@@ -81,6 +80,20 @@
   object-fit: cover;
   background-position: center;
   margin-right: 30px;
+}
+
+@media screen and (max-width: 768px) {
+  .profile__title {
+    font-size: 32px;
+    line-height: 38px;
+    max-width: 340px;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 780px) {
+  .profile__add-button {
+    margin: 0 0 0 20px;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -118,16 +131,32 @@
   }
 }
 
-@media screen and (min-width: 480px) and (max-width: 780px) {
-  .profile__add-button {
-    margin: 0 0 0 20px;
-  }
-}
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 320px) {
   .profile__title {
-    font-size: 32px;
-    line-height: 38px;
-    max-width: 340px;
+    font-size: 22px;
+    line-height: 1.2;
+    max-width: 196px;
+  }
+
+  .profile__edit-button {
+    height: 18px;
+    width: 18px;
+  }
+
+  .profile__description {
+    font-size: 14px;
+    height: 14px;
+    width: 282px;
+    text-align: center;
+  }
+
+  .profile__image {
+    margin: 0;
+  }
+
+  .profile__add-button {
+    margin: 0;
+    width: 282px;
+    height: 50px;
   }
 }
