--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -107,15 +107,15 @@
     margin-right: 10px;
     font-size: 22px;
     line-height: 1.2;
+    max-width: 196px;
   }
 
   .profile__info {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
+    max-width: 282px;
     margin: 30px 19px 36px 19px;
     justify-content: center;
-    align-items: center;
   }
 
   .profile__description {
@@ -128,35 +128,15 @@
   .profile__add-button {
     margin: 0;
     width: 282px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .profile__title {
-    font-size: 22px;
-    line-height: 1.2;
-    max-width: 196px;
   }
 
   .profile__edit-button {
     height: 18px;
     width: 18px;
-  }
-
-  .profile__description {
-    font-size: 14px;
-    height: 14px;
-    width: 282px;
-    text-align: center;
+    padding: 0;
   }
 
   .profile__image {
     margin: 0;
-  }
-
-  .profile__add-button {
-    margin: 0;
-    width: 282px;
-    height: 50px;
   }
 }
