--- a/blocks/card.css
+++ b/blocks/card.css
@@ -3,7 +3,7 @@
   border-radius: 10px;
   flex-direction: column;
   list-style: none;
-  overflow: hidden;
+  position: relative;
 }
 
 .card__title {
@@ -20,6 +20,8 @@
 .card__image {
   width: 282px;
   height: 282px;
+  object-fit: cover;
+  border-radius: 10px 10px 0 0;
 }
 
 .card__description {
@@ -41,12 +43,14 @@
   background: transparent url(../images/Group.svg) center no-repeat;
   width: 21px;
   height: 18px;
-  transition: opacity linear 0.5s;
+  transition: opacity linear 8ms;
   border: none;
   padding: 0;
   margin: 0;
 }
 
+.card__like-button_active {
+}
 .card__like-button:hover {
   opacity: 50%;
   cursor: pointer;
