--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -6,12 +6,19 @@
   left: 0;
   z-index: 999;
   background-color: rgba(0, 0, 0, 0.5);
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition:
+    visibility 0s linear 0.5s,
+    opacity 0.5s linear;
   padding: 0 19px;
+  display: flex;
 }
 
-.modal__opened {
-  display: flex;
+.modal_opened {
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0s;
 }
 
 .modal__container {
@@ -94,10 +101,31 @@
   cursor: pointer;
 }
 
+#card-image-modal-container {
+  background-color: transparent;
+}
+
+#modal-image {
+  max-width: 75vw;
+  max-height: 75vh;
+  width: 100%;
+  height: 100%;
+  border-radius: 0;
+}
+
+#modal-title {
+  font-family: "Inter", arial, sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  color: #ffffff;
+  margin: 10px 0 0 0;
+}
+
 @media screen and (max-width: 630px) {
   .modal__close {
     left: calc(100% - 40px);
-    bottom: calc(100% + 13px);
+    /* bottom: calc(100% + 13px);*/
+    top: -42px;
   }
 }
 
@@ -115,5 +143,11 @@
   .modal__button {
     font-size: 14px;
     margin: 45px 22px 25px;
+  }
+
+  .modal__close {
+    width: 26px;
+    height: 26px;
+    transform: #ffffff;
   }
 }
