--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -130,6 +130,10 @@
 }
 
 @media screen and (max-width: 480px) {
+  .modal__container {
+    max-width: 282px;
+  }
+
   .modal__heading {
     font-size: 18px;
     margin: 25px 22px 75px;
