--- a/blocks/card.css
+++ b/blocks/card.css
@@ -50,8 +50,26 @@
 }
 
 .card__like-button_active {
+  background-image: url("../images/Union.svg");
 }
+
 .card__like-button:hover {
   opacity: 50%;
   cursor: pointer;
+}
+
+.card__delete-button {
+  background: transparent url(../images/Group\ \(1\).svg) center no-repeat;
+  border: none;
+  position: absolute;
+  top: 18px;
+  right: 15px;
+  width: 18px;
+  height: 19px;
+  transition: opacity linear 8ms;
+}
+
+.card__delete-button:hover {
+  cursor: pointer;
+  opacity: 60%;
 }
