--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -69,10 +69,15 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   padding: 0 0 13px 0;
   margin: 0 36px 0 36px;
+  position: relative;
+}
+
+.modal__input_type_error {
+  border-bottom-color: #ff0000;
 }
 
 .modal__input:first-of-type {
-  margin: 0 36px 30px 36px;
+  margin: 0 36px 29px 36px;
 }
 
 .modal__input::placeholder {
@@ -80,6 +85,22 @@
   font-weight: 400;
   line-height: 1.2;
   color: #000;
+}
+
+.modal__error {
+  color: #ff0000;
+  font-size: 12px;
+  line-height: 1.2;
+  left: 36px;
+  position: absolute;
+  transition: opacity 0.3s;
+}
+
+.modal__error:first-of-type {
+  bottom: calc(50%);
+}
+.modal__error:last-of-type {
+  bottom: calc(32%);
 }
 
 .modal__button {
@@ -99,6 +120,21 @@
 .modal__button:hover {
   opacity: 0.8;
   cursor: pointer;
+}
+
+.modal__button_disabled {
+  opacity: 0.2;
+  color: #000;
+  background-color: white;
+  border: 1px #000 2px;
+}
+.modal__button_disabled:hover {
+  cursor: none;
+  opacity: 0.2;
+}
+
+.modal__label {
+  position: relative;
 }
 
 #card-image-modal-container {
