--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -46,6 +46,8 @@
   cursor: pointer;
 }
 
+
+
 .profile__title {
   font-family: "Inter", arial, sans-serif;
   font-size: 42px;
@@ -80,6 +82,11 @@
   object-fit: cover;
   background-position: center;
   margin-right: 30px;
+}
+
+.profile__image-edit-button {
+background: transparent url("../images/Edit\ Button.svg") center no-repeat;
+position:absolute
 }
 
 @media screen and (max-width: 768px) {
