--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -85,8 +85,25 @@
 }
 
 .profile__image-edit-button {
-background: transparent url("../images/Edit\ Button.svg") center no-repeat;
-position:absolute
+background: transparent url("../images/Avatar-edit.svg") center no-repeat;
+position:absolute;
+left: 0;
+height: 120px;
+width: 120px;
+border: none;
+object-position: center;
+padding: 0;
+margin:0;
+opacity:0;
+transition:
+opacity 0.5s linear,
+background-color 0.5s linear;
+}
+
+.profile__image-edit-button:hover {
+  opacity:1;
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 @media screen and (max-width: 768px) {
