--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -85,7 +85,7 @@
 }
 
 .profile__image-edit-button {
-background: transparent url("../images/Avatar-edit.svg") center no-repeat;
+background: transparent url(../images/Avatar-edit.svg) center no-repeat;
 position:absolute;
 left: 0;
 height: 120px;
